# uv-final-project

./: .envrc  .gitignore  flake.nix  main.py  proj-overview.md  pyproject.toml
.github/workflows/: quarto-pages.yml
docs/: COMPREHENSIVE_OVERVIEW.md  metric-decision.md
docs/executive_summary/: README.md  _quarto.yml  index.qmd  styles.scss
docs/executive_summary/_includes/: model_metrics.md
docs/executive_summary/_site/: index.html  search.json
docs/executive_summary/_site/site_libs/bootstrap/: bootstrap-db524e89a7eeecf20c2cf49815434b6c.min.css  bootstrap-e374fa848029b5b83087bf1a9c9287a6.min.css
docs/executive_summary/tools/: generate_label_distribution_plots.py  generate_model_metrics_md.py
models/: meta_native_activity_general_f1_macro_0.4445_20260409_215447.json  meta_native_activity_general_f1_macro_0.5829_20260408_221512.json  meta_native_activity_general_f1_macro_0.5938_20260408_215912.json  meta_native_activity_general_f1_macro_0.7772_20260409_214833.json  meta_sklearn_activity_general_f1_macro_0.4814_20260409_215520.json  meta_sklearn_activity_general_f1_macro_0.6157_20260408_215753.json  meta_sklearn_activity_general_f1_macro_0.6221_20260408_221358.json  meta_sklearn_activity_general_f1_macro_nan_20260408_221101.json
models/checkpoints/: checkpoint_native_activity_general_20260409_205617.json  checkpoint_native_activity_general_20260409_215443.json
notebooks/: 01_casas_data_exploration.ipynb  exploratory.ipynb  generalized_labels_exploration.ipynb  train.ipynb
reports/: trainlog
scripts/: __init__.py  beta_config.py  exploratory.md  train_beta_baseline.py  train_final.py
src/ds_project/: __init__.py  config.py
src/ds_project/data/: __init__.py  loaders.py  schemas.py
src/ds_project/features/: __init__.py  transforms.py
src/ds_project/io/: __init__.py  persistence.py
src/ds_project/models/: __init__.py  training.py
